--- a/addons/sourcemod/translations/kewaii_roulette.phrases.txt
+++ b/addons/sourcemod/translations/kewaii_roulette.phrases.txt
@@ -29,25 +29,25 @@
   "NoLoseNoWin"
   {
 	"#format" "{1:N}"
-	"pt" "{1} não perdeu nem ganhou"
-	"en" "{1} didn't lose nor win"
+	"pt" "{red}{1}{green} não perdeu nem ganhou"
+	"en" "{red}{1}{green} didn't lose nor win"
   } 
   "YouWin"
   {
-    "#format" "[1:N},{2:i},{3:i}"
-	"pt" "{1} ganhou {red}{2}{green} Créditos{blue}[x{3}]{green}"
-	"en" "{1} won {red}{2}{green} Credits{blue}[x{3}]{green}"
+    "#format" "{1:N},{2:i},{3:i}"
+	"pt" "{red}{1}{green} ganhou {red}{2}{green} Créditos{blue}[x{3}]{green}"
+	"en" "{red}{1}{green} won {red}{2}{green} Credits{blue}[x{3}]{green}"
   } 
   "YouLost"
   {
     "#format" "{1:N},{2:i}"
-	"pt" "{1} perdeu {red}{2}{green} créditos"
-	"en" "{1} lost {red}{2}{green} credits"
+	"pt" "{red}{1}{green} perdeu {red}{2}{green} créditos"
+	"en" "{red}{1}{green} lost {red}{2}{green} credits"
   } 
   "WinNumber"
   {
     "#format" "{1:N},{2:i}"
-	"pt" "{1} calhou o número: {red}{2}"
-	"en" "{1} got number: {red}{2}"
+	"pt" "{red}{1}{green} calhou o número: {red}{2}"
+	"en" "{red}{1}{green} got number: {red}{2}"
   }
 }
